--- a/games/invest_game/templates/respondent_investment.html
+++ b/games/invest_game/templates/respondent_investment.html
@@ -9,7 +9,7 @@
       Next, guess how much {{respondent}} will give back to you. You receive a
       bonus for a good guess – if your guess is within $1 of the actual amount,
       you will earn an additional $2. How much do you think the {{respondent}}
-      has decided to give back to you?
+      has decided to give back to you? Please use the slider at the right to make a decision.
     </h3>
   </div>
 </div>
@@ -50,355 +50,8 @@
     <span id="ReturnAmount">$0</span>
   </div>
 
-  <div id="LeftCoins">
-    <div id="LeftCoinsAmount">
-      <span id="LeftCoinsAmountNum">$5</span>
-    </div>
-    <div id="LeftCoin1" style="top:130px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin2" style="top:121px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin3" style="top:112px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin4" style="top:103px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin5" style="top:94px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin6" style="top:85px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin7" style="top:76px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin8" style="top:67px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin9" style="top:58px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin10" style="top:49px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin11" style="top:40px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin12" style="top:31px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin13" style="top:22px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin14" style="top:13px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin15" style="top:4px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin16" style="top:-5px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin17" style="top:-14px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin18" style="top:-23px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin19" style="top:-32px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="LeftCoin20" style="top:-41px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-
-    <div id="LeftCoinsLabel">
-      <p id="InvestorIdentityLabel" style="font-weight:bold; font-size: 15px;">
-        INVESTOR
-      </p>
-      <p id="InvestorIdentity" style="font-weight:bold; font-size: 20px;">
-        YOU
-      </p>
-    </div>
-  </div>
-
-  <div id="RightCoins">
-    <div id="RightCoinsAmount">
-      <span id="RightCoinsAmountNum">$5</span>
-    </div>
-    <div id="RightCoin1" style="top:130px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin2" style="top:121px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin3" style="top:112px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin4" style="top:103px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin5" style="top:94px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin6" style="top:85px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin7" style="top:76px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin8" style="top:67px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin9" style="top:58px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin10" style="top:49px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin11" style="top:40px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin12" style="top:31px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin13" style="top:22px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin14" style="top:13px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin15" style="top:4px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin16" style="top:-5px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin17" style="top:-14px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin18" style="top:-23px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin19" style="top:-32px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-    <div id="RightCoin20" style="top:-41px;">
-      <img
-        src="{% static 'games/media/goldcoin.png' %}"
-        alt="Gold Coin"
-        height="100px"
-        width="100px"
-      />
-    </div>
-
-    <div id="RightCoinsLabel">
-      <p id="ResponderIdentityLabel" style="font-weight:bold; font-size: 15px;">
-        RESPONDER
-      </p>
-      <p id="ResponderIdentity" style="font-weight:bold;  font-size: 20px;">
-        {{respondent}}
-      </p>
-    </div>
-  </div>
+  {% include "_coins.html" with label="Investor" coins=investor_coins name="YOU" %}
+  {% include "_coins.html" with label="Respondent" coins=respondent_coins name=respondent %}
 
   <div id="SliderContainer">
     <div id="parent" style="display: table; table-layout: fixed;">
@@ -436,9 +89,9 @@
 </div>
 {% endblock rightcontent %} 
 
-{% block content %}
-<!-- JavaScript code for this project -->
-<script>
+{% block jscontent %}
+<!-- JavaScript code for this template -->
+<script type="text/javascript">
   $(document).ready(function(){
       var invested = {{invested}}
       var returned = 0
@@ -451,38 +104,6 @@
         $(elm).appendTo($(".childwrap2"))
       }
 
-      function getCookie(name) {
-          var cookieValue = null;
-          if (document.cookie && document.cookie != '') {
-              var cookies = document.cookie.split(';');
-              for (var i = 0; i < cookies.length; i++) {
-                  var cookie = jQuery.trim(cookies[i]);
-                  // Does this cookie string begin with the name we want?
-                  if (cookie.substring(0, name.length + 1) == (name + '=')) {
-                      cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                      break;
-                  }
-              }
-          }
-          return cookieValue;
-      }
-      var csrftoken = getCookie("um-online-study-game-csrftoken");
-
-      function csrfSafeMethod(method) {
-          // these HTTP methods do not require CSRF protection
-          return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-      }
-      $.ajaxSetup({
-          beforeSend: function(xhr, settings) {
-              if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                  xhr.setRequestHeader("X-CSRFToken", csrftoken);
-              }
-          }
-      });
-
-      $("#RightContentContainer").height($(window).height()*0.75);
-      $("#RightContentContainer").width($(window).width()/2);
-
       invested = invested - 2;
       // returned = {{returned}}
       $("#UpperArrow").children("img")[0].src ="{% static 'games/media/Upper_Blue_Arrow.png' %}";
@@ -490,7 +111,7 @@
       $("#ReturnCalc").show();
       $("#InvestmentAmount").css("color", "blue");
       $("#InvestmentCalc").css("color", "blue");
-      $("#LeftCoinsAmountNum").css("color", "green");
+      $("#InvestorCoinsAmountNum").css("color", "green");
       $("#Instructions1").slideUp();
       $("#Instructions2").show().slideDown();
       $("#PartNum").html(invested + 2);
@@ -500,7 +121,7 @@
       $("#InvestorIdentityLabel").css("font-weight", "normal");
       $("#ResponderIdentity").css("font-weight", "bold");
       $("#ResponderIdentityLabel").css("font-weight", "bold");
-      $("#RightCoinsAmount").css("color", "green");
+      $("#RespondentCoinsAmount").css("color", "green");
 
       $( "#InvestmentAmount" ).html( "$" + invested );
       $( "#InvestmentResult" ).html( "$" + (invested * 3) );
@@ -508,11 +129,11 @@
       $("#returned").val( returned );
       $( "#ReturnAmount" ).html( "$" + returned );
 
-      $( "#LeftCoinsAmountNum" ).html( "$" + (5 - invested + returned) );
-      $( "#RightCoinsAmountNum" ).html( "$" + (5 + (invested * 3) - returned) );
+      $( "#InvestorCoinsAmountNum" ).html( "$" + (5 - invested + returned) );
+      $( "#RespondentCoinsAmountNum" ).html( "$" + (5 + (invested * 3) - returned) );
 
-      $("#LeftCoinsAmount").css("top", (76 - 9 * (returned - invested)) + "px");
-      $("#RightCoinsAmount").css("top", (76 + 9 * (returned - (invested * 3))) + "px");
+      $("#InvestorCoinsAmount").css("top", (76 - 9 * (returned - invested)) + "px");
+      $("#RespondentCoinsAmount").css("top", (76 + 9 * (returned - (invested * 3))) + "px");
 
       var sliderMaxVal = 5 + (invested * 3);
       var sliderMinVal = 0;
@@ -520,18 +141,18 @@
 
       for (i = 1; i <= 20; i++) {
         if (i <= sliderVal) {
-          $("#RightCoin" + i).show();
+          $("#RespondentCoin" + i).show();
         }
         else {
-          $("#RightCoin" + i).hide();
+          $("#RespondentCoin" + i).hide();
         }
       }
       for (i = 1; i <= 20; i++) {
         if (i <= 5 - invested + returned) {
-          $("#LeftCoin" + i).show();
+          $("#InvestorCoin" + i).show();
         }
         else {
-          $("#LeftCoin" + i).hide();
+          $("#InvestorCoin" + i).hide();
         }
       }
 
@@ -548,26 +169,26 @@
           $("#returned").val(transferedAmount);
           $( "#ReturnAmount" ).html( "$" + transferedAmount );
 
-          $( "#LeftCoinsAmountNum" ).html( "$" + (5 - invested + transferedAmount) );
-          $( "#RightCoinsAmountNum" ).html( "$" + inv );
+          $( "#InvestorCoinsAmountNum" ).html( "$" + (5 - invested + transferedAmount) );
+          $( "#RespondentCoinsAmountNum" ).html( "$" + inv );
 
-          $("#LeftCoinsAmount").css("top", (76 - 9 * (transferedAmount - invested)) + "px");
-          $("#RightCoinsAmount").css("top", (76 + 9 * (transferedAmount - (invested * 3))) + "px");
+          $("#InvestorCoinsAmount").css("top", (76 - 9 * (transferedAmount - invested)) + "px");
+          $("#RespondentCoinsAmount").css("top", (76 + 9 * (transferedAmount - (invested * 3))) + "px");
 
           for (i = 1; i <= 20; i++) {
             if (i <= inv) {
-              $("#RightCoin" + i).show();
+              $("#RespondentCoin" + i).show();
             }
             else {
-              $("#RightCoin" + i).hide();
+              $("#RespondentCoin" + i).hide();
             }
           }
           for (i = 1; i <= 20; i++) {
             if (i <= 5 - invested + transferedAmount) {
-              $("#LeftCoin" + i).show();
+              $("#InvestorCoin" + i).show();
             }
             else {
-              $("#LeftCoin" + i).hide();
+              $("#InvestorCoin" + i).hide();
             }
           }
 
@@ -579,20 +200,6 @@
       $("#SliderSubmitBtn").click(function() {
           $("#ReturnForm").submit();
       });
-
-    var modalObj;
-    modalObj = modalObj || (function () {
-        var pleaseWaitDiv = $('<div class="modal fade" id="pleaseWaitDialog" data-backdrop="static" data-keyboard="false"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><h1>Please wait for the other player...</h1></div><div class="modal-body"><div class="progress progress-striped active"><div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%"><span class="sr-only">100% Complete</span></div></div></div></div></div></div></div>');
-        return {
-            showPleaseWait: function() {
-                pleaseWaitDiv.modal();
-            },
-            hidePleaseWait: function () {
-                pleaseWaitDiv.modal('hide');
-            },
-
-        };
-    })();
   });
 </script>
-{% endblock content %}
+{% endblock jscontent %}
