--- a/games/invest_game/templates/select_respondent.html
+++ b/games/invest_game/templates/select_respondent.html
@@ -1,57 +1,49 @@
 {% extends "base.html" %} 
-{% load static %}
+
+{% load static %} 
 
 {% block title %}Welcome!{% endblock title %} 
 
 {% block leftcontent %}
-<div>
-  <h3>
-    Let’s first find out who your Responder is. Click on one of the boxes on the
+<div id="LeftContentContainer">
+  <h3 id="intro-title">
+    Let’s first find out who your Responder is. Click on one of the icons on the
     right.
   </h3>
-
   <div class="step_by_step" style="display:none">
-    <h3 style="display:inline">
-      Your Responder’s name is 
-      <h3 class="responder_name" style="display:inline"></h3>
-      .
+    <h3>
+      Your Responder’s name is
+      <strong class="responder-name"></strong>.
     </h3>
     <h3>Here’s how the game works:</h3>
     <ul>
       <li>
-        <h4 style="display:inline">
-          Each of you – the Investor and
-          <h4 class="responder_name" style="display:inline"></h4>
+        <h4>
+          Each of you – the Investor and <span class="responder-name"></span> -
+          will be given $5.
         </h4>
-        <h4 style="display:inline">will be given $5.</h4>
       </li>
       <li>
-        <h4 style="display:inline">
+        <h4>
           As the Investor, you will then have the opportunity to pass some, all
-          or none of your $5 to
-          <h4 class="responder_name" style="display:inline"></h4>
+          or none of your $5 to <span class="responder-name"></span>, as you
+          like.
         </h4>
-        <h4 style="display:inline">, as you like.</h4>
       </li>
       <li>
-        <h4 style="display:inline">
+        <h4>
           Then we will triple the amount you give and pass it to
-          <h4 class="responder_name" style="display:inline"></h4>
-          .
-        </h4>
-        <br />
-      </li>
-      <li>
-        <h4 style="display:inline">
-          After that,
-          <h4 class="responder_name" style="display:inline"></h4>
-        </h4>
-        <h4 style="display:inline">
-          will give some of the money they have at that point to you.
+          <span class="responder-name"></span>.
         </h4>
       </li>
       <li>
-        <h4>OK, let’s play.</h4>
+        <h4>
+          After that, <span class="responder-name"></span> will give some of the
+          money they have at that point to you.
+        </h4>
+      </li>
+      <li>
+        <h4>OK, let’s play. Click "Next" to continue.</h4>
       </li>
     </ul>
   </div>
@@ -60,103 +52,43 @@
 
 {% block rightcontent %}
 <div id="RightContentContainer">
-  <div class="row" style="padding: 20px">
-    <h3>Please choose a person & Click submit to move to Invest Game</h3>
-  </div>
-  <div class="row">
-    <div class="col-md-2">
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-      <div>
-        <br />
-      </div>
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-    </div>
-    <div class="col-md-2">
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-      <div>
-        <br />
-      </div>
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-    </div>
-    <div class="col-md-2">
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-      <div>
-        <br />
-      </div>
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-    </div>
-    <div class="col-md-2">
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-      <div>
-        <br />
-      </div>
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-    </div>
-    <div class="col-md-2">
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-      <div>
-        <br />
-      </div>
-      <img
-        class="respondent_img"
-        src="{% static 'games/media/user.svg' %}"
-        style="width:70% "
-      />
-    </div>
+  <div id="respondent-images-container">
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
+    <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
   </div>
 
-  <div class="row" style="padding: 20px">
-     <button
-       style="position: absolute; right: 120px; top: 300px"
-       type="button"
-     >
-      <a href={% url "invest_game:user_investment" %}>Next</a>
-     </button>
+  <div class="pull-right">
+    <button id="next-btn" type="button" class="btn btn-large btn-primary">
+      Next
+    </button>
   </div>
 </div>
 {% endblock rightcontent %} 
 
-{% block content %}
-<!-- JavaScript code for this project -->
-<script>
+{% block jscontent %}
+<!-- JavaScript code for this template -->
+<script type="text/javascript">
   $(document).ready(function() {
-    $("#RightContentContainer").height($(window).height() * 0.75);
+    var isWithRespondent = false;
+
+    $("#next-btn").click(function(evt) {
+      evt.preventDefault()
+
+      if (isWithRespondent) {
+        window.location.href = {% url "invest_game:user_investment" %}
+      } else {
+        alert("Please select a Responder by clicking on one of the images.")
+      }
+    });
+
     var names = [
       "Ibrahim",
       "Sahr",
@@ -170,41 +102,9 @@
       "Theresa",
     ];
 
-    $(".respondent_img").click(function() {
-      // cur_id = $(this).attr("id")
+    $(".respondent-img").click(function() {
       var random_id = Math.floor(Math.random() * 10);
       var respondent_name = names[random_id];
-
-      function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie != "") {
-          var cookies = document.cookie.split(";");
-          for (var i = 0; i < cookies.length; i++) {
-            var cookie = jQuery.trim(cookies[i]);
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) == name + "=") {
-              cookieValue = decodeURIComponent(
-                cookie.substring(name.length + 1)
-              );
-              break;
-            }
-          }
-        }
-        return cookieValue;
-      }
-      var csrftoken = getCookie("um-online-study-game-csrftoken");
-
-      function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return /^(GET|HEAD|OPTIONS|TRACE)$/.test(method);
-      }
-      $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-          if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-          }
-        },
-      });
 
       request = $.ajax({
         url: "{% url 'invest_game:select_respondent' %}",
@@ -216,11 +116,15 @@
       request.done(function(data) {
         console.log(data);
         $(".respondent_input").val(data);
-        $(".responder_name").text(data);
+        $(".responder-name").text(data);
         $(".step_by_step").show();
-        $(".respondent_img").off("click");
+        $(".respondent-img").off("click");
+
+        $("#respondent-images-container, #intro-title").css("opacity", "0.1")
+
+        isWithRespondent = true;
       });
     });
   });
 </script>
-{% endblock content %}
+{% endblock jscontent %}
